--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         pip install muggle_ocr -i https://pypi.doubanio.com/simple
         pip install requests
+        pip install threadpool
     - name: Update paper list
       run: |
         python check.py  
